Fix maven configuration inheritance